# LLS-Player

./: LICENSE  README.md
demo/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
docs/: Android集成简介.md  README-CN.md  Windows集成简介.md  iOS集成简介.md
src/: BUILD.gn  build_android.sh  build_ios.sh  build_win.sh
src/api/audio_codecs/: BUILD.gn  audio_decoder.h  audio_decoder_sink.h  audio_format.cc  audio_format.h
src/api/neteq/: neteq.h
src/api/video/: video_timing.h
src/audio/: audio_receive_stream.cc  audio_receive_stream.h  audio_transport_impl.cc  audio_transport_impl.h  channel_receive.cc  channel_receive.h
src/call/: audio_receive_stream.h  syncable.h  video_receive_stream.h
src/common_video/h264/: h264_bitstream_parser.cc  h264_bitstream_parser.h
src/media/base/: media_channel.h  media_constants.cc  media_constants.h
src/media/engine/: internal_decoder_factory.cc  payload_type_mapper.cc  unhandled_packets_buffer.cc  unhandled_packets_buffer.h  webrtc_video_engine.cc  webrtc_voice_engine.cc  webrtc_voice_engine.h
src/modules/audio_coding/: BUILD.gn
src/modules/audio_coding/acm2/: acm_receiver.cc  acm_receiver.h  audio_coding_module.cc
src/modules/audio_coding/codecs/aac/: audio_decoder_aac.cc  audio_decoder_aac.h
src/modules/audio_coding/codecs/opus/: audio_decoder_opus.h
src/modules/audio_coding/include/: audio_coding_module.h
src/modules/audio_coding/neteq/: accelerate.cc  accelerate.h  decision_logic.cc  decision_logic.h  decoder_database.cc  delay_manager.cc  neteq_impl.cc  neteq_impl.h  preemptive_expand.cc  preemptive_expand.h  red_payload_splitter.cc  red_payload_splitter.h
src/modules/audio_device/: BUILD.gn
src/modules/audio_device/include/: fake_audio_device_impl.h
src/modules/rtp_rtcp/include/: receive_statistics.h  rtp_rtcp_defines.h
src/modules/rtp_rtcp/source/: receive_statistics_impl.cc  receive_statistics_impl.h  rtp_packet_received.h  rtp_video_header.h  video_rtp_depacketizer_h264.cc
src/modules/video_coding/: frame_buffer2.cc  frame_buffer2.h  nack_requester.cc  nack_requester.h  packet_buffer.cc  packet_buffer.h  rtp_seq_num_only_ref_finder.cc  timing.cc  timing.h
src/modules/video_coding/codecs/h264/: h264.cc
src/pc/: channel.cc  rtp_transport.cc  rtp_transport.h  stats_collector.cc
src/rtc_base/: BUILD.gn  bit_buffer.h  timer.cc  timer.h
src/rtd/: CMakeLists.txt  rtd_api_impl.cpp  rtd_api_impl.h  rtd_audio_decoder_factory.cpp  rtd_demuxer.h  rtd_engine_impl.cpp  rtd_engine_impl.h  rtd_engine_interface.cpp  rtd_engine_interface.h  rtd_frame_queue.cpp  rtd_internal.h  rtd_log.h  rtd_signaling.cpp  rtd_signaling.h  rtd_video_decoder_factory.h
src/rtd/project/ios/: CMakeLists.txt  build.sh  build_static.sh
src/rtd/project/ios/rtd/: rtd.h
src/rtd/project/ios/rtd.xcodeproj/: project.pbxproj
src/rtd/project/ios/rtd.xcodeproj/project.xcworkspace/xcuserdata/hzbiwei.xcuserdatad/: UserInterfaceState.xcuserstate
src/rtd/project/ios/rtd.xcodeproj/xcuserdata/hzbiwei.xcuserdatad/xcschemes/: xcschememanagement.plist
src/rtd/src/: CMakeLists.txt  rtd_api.cpp  rtd_api.h  rtd_audio_decoder_factory.h  rtd_dec.c  rtd_def.h  rtd_demuxer.cpp  rtd_engine_impl.cpp  rtd_engine_impl.h  rtd_frame_queue.h  rtd_log.cpp  rtd_signaling.cpp  rtd_signaling.h  rtd_video_decoder_factory.cpp
src/rtd/src/ffmpeg/: rtd_dec.c
src/video/: rtp_streams_synchronizer2.cc  rtp_video_stream_receiver2.cc  rtp_video_stream_receiver2.h  stream_synchronization.cc  video_receive_stream2.cc  video_receive_stream2.h
